--- a/unnamed_project/pom.xml
+++ b/unnamed_project/pom.xml
@@ -47,6 +47,12 @@
 			<version>1.2.58</version>
 		</dependency>
 
+		<!--webSocket-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
