--- a/unnamed_project/pom.xml
+++ b/unnamed_project/pom.xml
@@ -53,6 +53,27 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<dependency><!--mysql插件-->
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.47</version>
+			<!--<version>8.0.17</version>-->
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency><!--druid数据源-->
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.10</version>
+		</dependency>
+
+		<!--逆向工程-->
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -60,6 +81,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<overwrite>true</overwrite>
+					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
