--- a/unnamed_project/src/main/resources/application.yml
+++ b/unnamed_project/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8010
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/nation_app?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&autoReconnect=true&failOverReadOnly=false
+    username: root
+    password: 123456
