基于数据库的Security认证

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ HELP.md
 mvnw
 mvnw.cmd
 unnamed_project.iml
+.gradle/
+gradle/
+build/
+.pro
+*.iml
+*.properties
+gradlew
+gradlew.bat
+settings.gradle
