--- a/unnamed_project/pom.xml
+++ b/unnamed_project/pom.xml
@@ -74,6 +74,13 @@
 			<version>1.3.7</version>
 		</dependency>
 
+		<!--mybatis-->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -89,6 +96,7 @@
 				<version>1.3.2</version>
 				<configuration>
 					<overwrite>true</overwrite>
+					<verbose>true</verbose>
 					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
 				</configuration>
 			</plugin>
