--- a/unnamed_project/src/main/resources/application.yml
+++ b/unnamed_project/src/main/resources/application.yml
@@ -4,6 +4,16 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nation_app?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://localhost:3306/unnamed_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&autoReconnect=true&failOverReadOnly=false&useSSL=false
     username: root
     password: 123456
+  druid:
+      initial-size: 40
+      max-active: 50
+      min-idle: 30
+      max-wait: 60000
+      test-on-borrow: true
+      test-while-idle: true
+
+mybatis:
+  mapper-locations: classpath:mapper/*Mapper.xml
