--- a/unnamed_project/pom.xml
+++ b/unnamed_project/pom.xml
@@ -81,6 +81,14 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<!--JWT-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.10.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
